package com.example.tsubuyaki;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class TsubuyakiApplication {

    public static void main(String[] args) {
        SpringApplication.run(TsubuyakiApplication.class, args);
    }
}
